--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
     "axios": "^1.8.4",
-    "body-parser": "^2.2.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
+    "node-fetch": "^3.3.2",
     "server": "file:",
     "wikipedia": "^2.1.2"
   },
